tests/should_fail/for_struct_wrong_field.nv
module fail
// For destructure: struct with wrong field name
struct Point { x: Int, y: Int }
let points: [Point] = [Point(1, 2)]
for Point { x, z } in points {
    println(Cast::string(x))
}
